Mon Jan 11 13:30:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/accesslog.rb (WEBrick::AccessLog#format): fixed typo.

	* lib/webrick/httpstatus.rb (WEBrick::HTTPStatus::Status#initialize):
	  accept 0 or more arguments.  [ruby-dev:40021]

Mon Jan 11 03:04:12 2010  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (recursive_push): Taint internal hash to prevent
	  unexpected SecurityError; fixes #1864.

Sun Jan 10 17:25:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/webrick/accesslog.rb : Escape needed.

	* lib/webrick/httpstatus.rb : ditto.

	* lib/webrick/httprequest.rb : ditto.

	* lib/webrick/httputils.rb : ditto.

Sun Jan 10 04:54:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_class): raise TypeError same as class
	  statement.  [ruby-core:27504]

Sat Jan  9 08:40:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/configure.bat (WIN32DIR): regularise file separators.

Fri Jan  8 18:51:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_fwrite): preserve errno.  [ruby-core:27425]

Fri Jan  8 17:07:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_s_read): close the IO if an exception is raised on
	  seeking. [ruby-core:27429]

Fri Jan  8 17:02:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	 * ruby.h (RB_GC_GUARD_PTR): workaround for gcc optimization.
	   [ruby-core:27402]

Fri Jan  1 15:42:46 2010  Akinori MUSHA  <knu@iDaemons.org>

	* lib/mkmf.rb: Fix build.  COUTFLAG is not yet landed on this
	  branch.

Fri Jan  1 00:47:57 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_instance_method_unimpl): Suppress
	  compiler warnings.

Fri Jan  1 00:36:55 2010  Akinori MUSHA  <knu@iDaemons.org>

	* string.c: Add instance methods to Symbol: succ, next, <=>,
	  casecmp, =~, [], slice, length, size, empty?, match, upcase,
	  downcase, capitalize and swapcase. [backport from 1.9]

Fri Jan  1 00:33:13 2010  Akinori MUSHA  <knu@iDaemons.org>
